Fix: add some spacing between cards

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,8 @@ form
     display: flex;
     flex-direction: column;
 }
+
+.mat-card
+{
+    margin-top: 15px;
+}
